A lot of english updates

--- a/proyectos/anet-autolevel.html
+++ b/proyectos/anet-autolevel.html
@@ -1,5 +1,5 @@
 <!--19/06/2021-->
-<!--Este proyecto busca mejorar la impresora 3D más barata del mercado dándole la capacidad de tener una nivelación automática y que no necesite ser calibrada antes de cada impresión.-->
+<!--This project aims to improve the cheapest 3D printer on the market by giving it the capability of automatic bed leveling, eliminating the need for manual calibration before each print.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,19 +19,19 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/anet-autolevel_profile.jpg">
-                        <p>La Anet-A8 es o al menos era la impresora 3D más barata del mercado en abril del 2020 cuando la adquirí por un precio no mayor a 3600 pesos mexicanos, por su bajo costo es evidente que carece de muchas de las características premium de otras impresoras, entre ellas está la nivelación automática que por medio de un sensor de distancia permite conocer la altura de la cama en todos sus puntos y de esa manera es capaz de imprimir en condiciones más adversas como en superficies inclinadas.</p><br><p>La ventaja de tener una nivelación automática es que podemos imprimir por más tiempo sin tener que recalibrar la cama caliente que es un proceso que toma tiempo importante, por ello consideré significativo implementar esta característica en mi impresora adaptando el hardware existente. El proceso consistió de una serie de sencillos pasos y fue documentado en un video para mi canal de youtube que se puede encontrar en el siguiente <a href="https://www.youtube.com/watch?v=YItKc0Y6AW0"  target="_blank">enlace</a>.</p><br><p>De cualquier forma en la siguiente lista resumo el proceso de implementación:</p>
+                        <p>The Anet A8 is, or at least was, the cheapest 3D printer on the market in April 2020 when I purchased it for a price not exceeding 3600 Mexican pesos. Due to its low cost, it's evident that it lacks many of the premium features found in other printers, including automatic bed leveling. Automatic bed leveling, achieved through a distance sensor, allows the printer to determine the height of the bed at all points, enabling it to print under more challenging conditions, such as on inclined surfaces.</p><br><p>The advantage of having automatic bed leveling is that we can print for longer periods without the need to recalibrate the heated bed, which can be a time-consuming process. That's why I considered it significant to implement this feature in my printer by adapting the existing hardware. The process involved a series of simple steps, which I documented in a video for my YouTube channel. You can find the video at the following <a href="https://www.youtube.com/watch?v=YItKc0Y6AW0"  target="_blank">link</a>.</p><br><p>In any case, in the following list I summarize the implementation process:</p>
                         <ul>
-                            <li>Desoldar limit switch del eje z.</li>
-                            <li>Soldar sensor inductivo en el lugar del limit switch.</li>
-                            <li>Modificar el firmware de la impresora para que acepte el comando de nivelación automática.</li>
-                            <li>Cubrir la superficie de impresión de un material conductor.</li>
-                            <li>Crear un perfil de impresión con la opción de nivelación automática.</li>
-                            <li>Comenzar a imprimir.</li>
+                            <li>Desolder z axis limit switch.</li>
+                            <li>Solder inductive sensor in place of limit switch.</li>
+                            <li>Modify the printer firmware to accept the auto level command.</li>
+                            <li>Cover the printing surface with a conductive material.</li>
+                            <li>Create a print profile with the auto leveling option.</li>
+                            <li>Start printing.</li>
                         </ul>
-                        <p>Después de llevar a cabo ese proceso tuve como ventajas no tener que volver a calibrar la impresora en más de 6 meses de uso continuo manteniendo una alta calidad de impresión en mis piezas.</p>
+                        <p>After carrying out this process, I had the advantages of not having to recalibrate the printer in more than 6 months of continuous use, maintaining a high print quality in my pieces.</p>
                         <img src="../images/anet-autolevel_profile.jpg">
                     </div>
                 </div>
@@ -39,7 +39,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/level_1.jpg">
