--- a/proyectos/bazoobed.html
+++ b/proyectos/bazoobed.html
@@ -1,5 +1,5 @@
 <!--15/04/2020-->
-<!---Un robot para una competencia interna de mi preparatoria, su misión era reventar 12 globos colocados en la periferia de una cancha circular en el menor tiempo posible.-->
+<!--A robot for an internal competition at my high school, its mission was to pop 12 balloons placed around the perimeter of a cuadrangular field in the shortest time possible.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/bazoobed_profile.jpg">
-                        <p>En mi último semestre de preparatoria la escuela sacó una convocatoria sobre una competencia interna de robótica a nivel nacional, esta consistía en fabricar un robot capaz de reventar 12 globos localizados en la periferia de una cancha cuadrada en el menor tiempo posible.</p><br><p>Mi enfoque para resolver este problema fue sencillo, fabricar una pistola de balas NERF a las cuales les pondría una aguja en la punta con las que reventaría los globos, esta pistola estaría conectada a dos ejes motorizados que permitirían cambiar el ángulo de disparo de izquierda a derecha y de arriba a abajo.</p><br><p>El principio de funcionamiento era sencillo, dos servomotores controlarían el ángulo de disparo, dos motores de 6 volts girarían en sentidos contrarios para acelerar las balas y dispararlas y finalmente un tercer servomotor de menor tamaño empujaría las balas desde su cartucho hasta los motores.</p><br><p>En el área de la electrónica se usaría un atmega328p como cerebro del robot, un módulo bluetooth para comunicar el robot con una computadora y sensores varios (infrarrojos y potenciometros) para conocer la posición de disparo en todo momento.</p><br><p>En el concurso quedé en segundo lugar después de que el bluetooth se desconectara antes de reventar el último globo y tomara mucho tiempo en reconectar.</p>
+                        <p>In my final semester of high school, the school announced an internal robotics competition at the national level. The competition involved fabricating a robot capable of popping 12 balloons located around the perimeter of a square field in the shortest time possible.</p><br><p>My approach to solving this problem was straightforward. I decided to fabricate a modified NERF gun, where I attached a needle to the tip of the darts. This way, I could pop the balloons with precision. The modified gun was connected to two motorized axes that allowed for adjusting the shooting angle both horizontally (left to right) and vertically (up and down).</p><br><p>The principle of operation was simple. Two servo motors controlled the shooting angle, while two 6-volt motors rotated in opposite directions to accelerate and fire the darts. Finally, a smaller-sized third servo motor pushed the darts from their cartridge into the motors for launching.</p><br><p>In the electronics area, an ATmega328P microcontroller would be used as the brain of the robot. A Bluetooth module would enable communication between the robot and a computer. Various sensors such as infrared sensors and potentiometers would be utilized to determine the shooting position accurately at all times.</p><br><p>I finished in second place in the competition after experiencing a disconnection issue with the Bluetooth module just before popping the last balloon. The reconnection process took a significant amount of time, causing a delay in completing the task. Despite this setback, achieving the second-place position is still a commendable accomplishment.</p>
                         <img src="../images/bazoobed_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/bazoobed_1.jpg">
