--- a/proyectos/dif-arduino.html
+++ b/proyectos/dif-arduino.html
@@ -1,5 +1,5 @@
 <!--30/01/2023-->
-<!--Un invierno donde en colaboración con ASCI! (organización de difusión y enseñanza de las ciencias) impartí cursos de robótica con Arduino a niños de 12 a 15 años.-->
+<!--During one winter, in collaboration with ASCI! (an organization dedicated to promoting and teaching sciences), I taught robotics courses with Arduino to children aged 12 to 15 years old.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="small-description">
+                    <h1 class="subtitle">What is it about?</h1>
+                    <div class="description">
                         <img src="../images/dif-arduino_profile.jpg">
-                        <p>Durante el primer mes del 2023 me informaron que el proyecto que ya había realizado con un grupo de estudiantes de ingeniería en julio del año pasado cuyo propósito era enseñar robótica a través de LEGO se volvería a realizar pero en esta ocasión usando la plataforma Arduino en una interfaz de programación en bloques para facilitar el aprendizaje en lugar de directamente ponerlos a escribir código en C. Entonces decidí volverme a aventurar como tutor de 5 chicas y 5 chicos para enseñarles todo lo que necesitaban saber para programar un robot que pudiera evitar los obstáculos que se le presentaban en su camino.</p><br><p>En este proyecto el reto volvió a ser el mismo que en su primera edición ya que la parte más dificil no fue transmitir el conocimiento técnico, sino que el reto real era encontrar las maneras de comunicar los temas sin que les pareciera aburrido a los niños.</p>
+                        <p>In January 2023, I received the news that the project I had previously conducted with a group of engineering students in July of the previous year, which aimed to teach robotics using LEGO, would be repeated. However, this time, we would be using the Arduino platform and a block-based programming interface to facilitate learning instead of directly having them write code in C. Excited about the opportunity, I decided to embark on this adventure again, this time as a tutor for five girls and five boys. My goal was to teach them everything they needed to know to program a robot capable of obstacle avoidance.</p><br><p>In this project, the challenge remained the same as in its first edition. The most difficult part was not transmitting the technical knowledge but finding ways to communicate the topics in a way that would not bore the children. It was important to keep their interest and engagement throughout the learning process. Therefore, I employed various interactive and hands-on activities, demonstrations, and engaging discussions to make the learning experience enjoyable and captivating for the children. By incorporating elements of fun and creativity, we were able to effectively teach robotics concepts and keep the children excited and motivated.</p>
                         <img src="../images/dif-arduino_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/dif-arduino_1.jpg">
