--- a/proyectos/e-bike.html
+++ b/proyectos/e-bike.html
@@ -1,5 +1,5 @@
 <!--10/10/2021-->
-<!--Una bicicleta eléctrica controlada por una cadena externa por tres motores de alta tecnología para viajar sin pedalear.-->
+<!--A chain-driven electric bicycle powered by three high-tech motors for pedaling-free travel.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,17 +19,17 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/e-bike_profile.jpg">
-                        <p>Un tiempo de mi vida me dediqué a vender productos por internet y hacer entregas a domicilio, el problema era que las entregas las hacía caminando al no tener coche, después decidí pasar a hacer las entregas en bicicleta pero me cansaba mucho por lo que decidí convertir mi bicicleta a eléctrica usando motores que tenía en casa y el sistema de control de los robots de la competencia en la que participaba, el proceso fue complicado debido a mi escasa herramienta y presupuesto, pero de alguna formá logré ponerlo en marcha </p><br><p>La bicicleta eléctrica contaba con los siguientes elementos:</p>
+                        <p>For a period of my life, I dedicated myself to selling products online and making home deliveries. The challenge was that I had to make the deliveries on foot as I didn't have a car. Later, I decided to switch to making deliveries by bicycle. However, I found it tiring, so I decided to convert my bicycle into an electric one using motors I had at home and the control system from the competition robots I participated in. The process was challenging due to limited tools and budget, but somehow, I managed to get it up and running.</p><br><p>The electric bicycle had the following components:</p>
                         <ul>
-                            <li>Tres motores NEO sin escobillas.</li>
-                            <li>Tres controladores de motores SPARK MAX para controlar la velocidad por pulsos PWM.</li>
-                            <li>Un arduino UNO como cerebro de la bicicleta</li>
-                            <li>Un potenciometro conectado a una palanca de freno que servía de acelerador.</li>
+                            <li>Three brushless NEO motors.</li>
+                            <li>Three SPARK MAX motor controllers to control the speed by PWM pulses.</li>
+                            <li>An arduino UNO as the brain of the bike.</li>
+                            <li>A potentiometer connected to a brake lever that served as an accelerator.</li>
                         </ul>
-                        <p>La bicicleta funcionó sin ningún problema y me sirvió para viajar indefinidamente por casi 3 meses hasta que tuve que regresar los componentes al equipo de robótica ya que no eran mios.</p>
+                        <p>The bicycle worked flawlessly and served me well for indefinite travel for nearly 3 months, until I had to return the components to the robotics team since they were not mine.</p>
                         <img src="../images/e-bike_profile.jpg">
                     </div>
                 </div>
@@ -37,7 +37,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/e-bike_1.jpg">
