--- a/proyectos/e-gokart.html
+++ b/proyectos/e-gokart.html
@@ -1,5 +1,5 @@
 <!--19/07/2019-->
-<!--Go Kart eléctrico hecho a base de tubos de PVC como medio de difusión de la ciencia y la tecnología a todos los rincones de México.-->
+<!--An electric Go Kart made using PVC pipes as a means to promote science and technology in every corner of Mexico.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,17 +19,17 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/e-gokart_profile.jpg">
-                        <p>Este proyecto cosistió en la elaboración de un go-kart eléctrico hecho a base de tubos de PVC, la razón de su extraño material de estructura era que quería difundir la ciencia y la tecnología a rincones remotos de México, para hacerlo se me ocurrió la gran idea de llevar una muestra real de lo que es posible hacer gracias a la ciencia y la tecnología. Con este enfoque pensé que una forma impactante de mostrar la ingeniería sería creando un vehículo eléctrico, para construirlo con poco presupuesto y sin muchas herramientas pensé en hacer una abstracción a un LEGO, de esta forma llevaría piezas de PVC precortadas a las escuelas donde se hicieran las pláticas y solo bastaría que los niños las ensamblaran siguiendo un instructivo.</p><br><p>Además cada vehículo contaría con:</p>
+                        <p>This project consisted of creating an electric Go Kart using PVC pipes as the main structural material. The reason behind choosing this unconventional material was to spread awareness of science and technology to remote areas of Mexico. I had the great idea of bringing a tangible demonstration of what is possible through science and technology. To achieve this, I thought that creating an electric vehicle would be a captivating way to showcase engineering principles. To build the Go Kart with a limited budget and minimal tools, I decided to abstract the construction process by using PVC pipes as a LEGO-like building system. I would bring pre-cut PVC pieces to schools where presentations would take place, and the children could assemble them following detailed instructions.</p><br><p>In addition to the PVC structure, each Go Kart would include the following components:</p>
                         <ul>
-                            <li>Recarga por energía solar.</li>
-                            <li>Indicador de carga de bateria.</li>
-                            <li>Control por pedal.</li>
-                            <li>Claxon.</li>
+                            <li>Recharge by solar energy.</li>
+                            <li>Battery charge indicator.</li>
+                            <li>Foot control.</li>
+                            <li>Horn.</li>
                         </ul>
-                        <p>Este proyecto debido a su caracter tecnológico-social fue premiado por la compañía "DOW chemical" como el mejor proyecto de latinoamérica del 2019 y me dio la oportunidad de viajar a <a href="./kenia" target="_blank">Kenia</a> a realizar un voluntariado con los otros 27 ganadores de este concurso alrededor del mundo.</p>
+                        <p>This project, with its technological and social nature, was awarded by the company "DOW chemical" as the best project in Latin America in 2019. As a result, I had the opportunity to travel to <a href="./kenia" target="_blank">Kenya</a> and participate in a volunteer program alongside the other 27 winners from around the world. This experience allowed me to contribute my skills and knowledge to a meaningful cause while collaborating with like-minded individuals from different countries. It was a truly enriching and rewarding experience that broadened my perspective and reinforced my passion for using technology to make a positive impact on society.</p>
                         <img src="../images/e-gokart_profile.jpg">
                     </div>
                 </div>
@@ -37,7 +37,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/e-gokart_1.jpg">
