--- a/proyectos/evolution-up.html
+++ b/proyectos/evolution-up.html
@@ -1,5 +1,5 @@
 <!--23/07/2021-->
-<!--Una organización sin fines de lucro que busca difundir la ciencia y la tecnología de la mayor cantidad de formas posibles.-->
+<!--A non-profit organization that aims to promote science and technology through various means.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="small-description">
+                    <h1 class="subtitle">What is it about?</h1>
+                    <div class="description">
                         <img src="../images/evolution-up_profile.jpg">
-                        <p>Una organización sin fines de lucro que fundé con mi socio Erick García con el propósito de buscar formas de difundir la ciencia y la tecnología, a partir de esta organización nació la idea de fungir como patrocinadores de equipos de robótica para manufacturar sus piezas sin ningún costo y así fomentar el desarrollo tecnológico de equipos con poca capacidad de mecanización.</p><br><p>Además del apoyo a estos equipos hacemos voluntariado para ayudar a sectores marginados de la población por medio de apoyo en donaciones y/o cursos para que encuentren oportunidades de salir adelante usando la ciencia y la tecnología como herramienta.</p><br><p>Actualmente estamos trabajando en crear un plan de estudios para abrir una escuela de robótica que pueda participar en las competencias de FIRST (una de las competencias más famosas de robótica a nivel mundial) y que está planeada para empezar a competir en la temporada del 2024.</p>
+                        <p>A non-profit organization that I founded with my partner Erick García with the purpose of seeking ways to promote science and technology. From this organization, the idea arose to sponsor robotics teams by manufacturing their parts at no cost, thus fostering technological development for teams with limited machining capabilities.</p><br><p>In addition to supporting these teams, we also engage in volunteer work to assist marginalized sectors of the population through donations and courses, helping them find opportunities to succeed by using science and technology as a tool.</p><br><p>We are currently working on creating a curriculum to open a robotics school that can participate in FIRST competitions (one of the most famous robotics competitions worldwide) and is planned to start competing in the 2024 season.</p>
                         <img src="../images/evolution-up_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/evolution-up_1.jpg">
