--- a/proyectos/first-2019-1.html
+++ b/proyectos/first-2019-1.html
@@ -1,5 +1,5 @@
 <!--10/09/2018-->
-<!--El primer robot que construí para la competencia de robotica FTC (FIRST Tech Challenge) cuyo propósito era tomar cubos y pelotas para colocarlos en una estación a gran altura.-->
+<!--The first robot I built for the FTC (FIRST Tech Challenge) robotics competition was designed to retrieve cubes and balls and place them in a high station.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,17 +19,17 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="small-description">
                         <img src="../images/first-2019-1_profile.jpg">
-                        <p>Este fue el primer robot que construí para la competencia de robótica FTC (FIRST Tech Challenge) el reto de ese año fue llamado "rover rockus" y consistía en recoger objetos del suelo que podían ser pelotas o cubos y debían ser colocados dentro de una nave ubicada en el centro de la cancha a una altura de almenos dos veces la altura original del robot.</p><br><p>Este robot no poseía características muy interesantes ya que era mi primera interacción con muchos de los componentes, pero dentro de sus limitadas capacidades estaban:</p>
+                        <p>This was the first robot I built for the FTC (FIRST Tech Challenge) robotics competition. The challenge that year was called "Rover Ruckus," and it involved retrieving objects from the ground, which could be balls or cubes, and placing them inside a spacecraft located in the center of the field at a height of at least twice the robot's original height.</p><br><p>This robot didn't have many advanced features as it was my first experience with many of the components, but within its limited capabilities, it had the following features:</p>
                         <ul>
-                            <li>Llantas mecanum para moverse en todas las direcciones.</li>
-                            <li>Brazo con gran reducción de engranajes para facilitar el control manual.</li>
-                            <li>Intake hecho con ligas para adaptabilidad a los diferentes elementos de juego.</li>
-                            <li>Segundo motor para colgar el robot y no forzar los delgados engranes del brazo.</li>
+                            <li>Mecanum wheels for omnidirectional movement.</li>
+                            <li>Gear reduction arm for manual control.</li>
+                            <li>Intake made with rubber bands for adaptability to different game elements.</li>
+                            <li>Second motor for hanging the robot and avoid straining the thin gears of the arm.</li>
                         </ul>
-                        <p>Este robot pasó a la eliminatoria nacional por un premio de diseño y llegó hasta las semifinales.</p>
+                        <p>This robot advanced to the national elimination rounds for a design award and made it to the semifinals.</p>
                         <img src="../images/first-2019-1_profile.jpg">
                     </div>
                 </div>
