--- a/proyectos/first-2020-1.html
+++ b/proyectos/first-2020-1.html
@@ -1,5 +1,5 @@
 <!--09/09/2019-->
-<!--Este robot fue el que mejores resultados me dio durante toda mi historia en equipos de robótica ya que fue campeón nacional y se llevó los dos premios más prestigiosos de la competencia en 3 ocasiones.-->
+<!--This robot gave me the best results throughout my entire history in robotics teams, as it became the national champion and won the two most prestigious awards in the competition on three occasions.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,21 +19,21 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/first-2020-1_profile.jpg">
-                        <p>Este es el robot al que le guardo más cariño de todos los que he hecho, si bien no ha sido el mejor en el aspecto de la ingeniería fue el que mejor resultados dio por la gran sinergia entre el equipo de construcción y programación, de esa forma a pesar de no tener la mejor máquina a comparación de otros equipos, su funcionamiento era excepcional.</p><br>
-                        <p>Este robot disponía de las siguientes características:</p>
+                        <p>This is the robot that holds a special place in my heart among all the ones I have built. While it may not have been the most technically advanced in terms of engineering, it yielded the best results due to the great synergy between the construction and programming teams. Despite not having the most sophisticated machine compared to other teams, its performance was exceptional.</p><br>
+                        <p>This robot had the following features:</p>
                         <ul>
-                            <li>Un chasis de llantas mecanum que le permitía moverse en todas las direcciones. (Adelante, Atras, Izquierda, Derecha, Rotaciones, Diagonales, Giros sobre diferentes ejes, etc.)</li>
-                            <li>Una librería que usaba cálculos trigonométricos para manejar el robot completamente derecho sin importar el desplazamiento de su centro de masa. ("LibTMOA" que viene de las siglas en inglés de: Trigonometric Mecanum Omnidriving Algorithm)</li>
-                            <li>Un brazo largo que comenzaba dentro del robot y se desdoblaba para poner alcanzar partes remotas del área de anotación, este brazo contenía una garra en la punta para poder tomar los elementos de juego que eran bloques de LEGO gigantes.</li>
-                            <li>Un elevador unido al brazo para poder formar torres con las piezas de LEGO gigantes que era el objetivo del juego.</li>
-                            <li>Un sistema de dos extrusiones metálicas para deplazar la plataforma de anotación por el campo de juego ya que eso daba puntos extra.</li>
-                            <li>Una baja altura para poder cruzar por debajo de un par de travesaños sin problema.</li>
-                            <li>Una gran variedad de sensores para conocer la posición del robot, el ángulo del brazo y cuando se tocan elementos periféricos del campo o los mismos elementos de juego.</li>
+                            <li>A mecanum wheel chassis that allowed it to move in all directions (forward, backward, left, right, rotations, diagonals, turns on different axes, etc.).</li>
+                            <li>A library that used trigonometric calculations to keep the robot perfectly straight regardless of the displacement of its center of mass ("LibTMOA," which stands for Trigonometric Mecanum Omnidriving Algorithm).</li>
+                            <li>A long arm that started inside the robot and unfolded to reach remote parts of the scoring area. This arm had a claw at the end to grab the game elements, which were giant LEGO blocks.</li>
+                            <li>A lift mechanism attached to the arm to build towers with the giant LEGO blocks, which was the objective of the game.</li>
+                            <li>A system of two metal extrusions to move the scoring platform across the playing field, as it provided extra points.</li>
+                            <li>A low height to easily pass under a couple of crossbars without any issue.</li>
+                            <li>A wide variety of sensors to determine the robot's position, the angle of the arm, and when peripheral elements of the field or game elements are touched.</li>
                         </ul>
-                        <p>Este robot fue campeón nacional y obtuvo 3 premios para representar a México en el mundial pero lamentablemente se canceló debido a la pandemia. Sin importar esto quiero destacar que la realización de este robot fue más importante que su gran desempeño, ya que durante estos meses aprendí a diseñar en 3D, producir renderizados de los diseños, mejoré mis habilidades de manufactura e incluso me introduje a la programación, pero sobre todo aprendí a gestionar y liderar proyectos y trabajar en equipo.</p>
+                        <p>This robot became the national champion and earned 3 awards to represent Mexico in the world championship, but unfortunately, it was canceled due to the pandemic. Regardless of this, I want to emphasize that the creation of this robot was more important than its outstanding performance. During these months, I learned 3D design, produced renderings of the designs, improved my manufacturing skills, and even delved into programming. But above all, I learned project management, leadership, and teamwork.</p>
                         <img src="../images/first-2020-1_profile.jpg">
                     </div>
                 </div>
@@ -41,7 +41,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-2020-1_1.jpg">
