--- a/proyectos/first-2020-2.html
+++ b/proyectos/first-2020-2.html
@@ -1,5 +1,5 @@
 <!--08/01/2020-->
-<!--Este fue el primer robot de gran tamaño que diseñé, tuvo un buen desempeño a pesar de su mal centro de masa que lo obligaba a avanzar despacio y obtuvo uno de los únicos 4 pases al mundial en México.-->
+<!--This was the first large-sized robot I designed, and despite its poor center of mass, it performed well and secured one of the only 4 spots for the Mexico championship in the world championship.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,20 +19,20 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/first-2020-2_profile.jpg">
-                        <p>Este fue el primer robot que diseñé para la competencia de robots grandes (FRC) su propósito era recolectar y almacenar 5 pelotas de espuma de 6 pulgadas para después dispararlas dentro de una portería hexagonal a más de dos metros de altura, este robot me trajo muy buenas experiencias principalmente porque su elaboración se llevó en el hangar de la aerolinea "interjet" y tuve contacto con muchos ingenieros que me orientaron y enseñaron sobre manufactura y químicos.</p><br>
-                        <p>En adición a esta experiencia el desempeño del robot en la competencia fue bueno por lo que obtuvimos un premio a la excelencia en ingeniería que nos llevó al mundial y de igual forma yo obtuve el premio llamado "dean's list" que se le otorga solo a 1 estudiante dentro de todo el evento el cual se caracteriza por representar de mejor manera los valores de la competencia y busca difundir el conocimiento de STEM en su comunidad.</p><br>
-                        <p>Las características que hacen especial a este robot son:</p>
+                        <p>This was the first robot I designed for the large-scale robot competition (FRC). Its purpose was to collect and store 5 six-inch foam balls and then shoot them into a hexagonal goal at a height of over two meters. This robot brought me great experiences, mainly because its construction took place in the hangar of the airline "Interjet," where I had the opportunity to interact with many engineers who guided and taught me about manufacturing and chemicals.</p><br>
+                        <p>In addition to this experience, the robot performed well in the competition, earning us the Excellence in Engineering Award, which qualified us for the World Championship. Furthermore, I personally received the "Dean's List" award, an honor bestowed upon only one student throughout the event. This award is known for recognizing individuals who exemplify the values of the competition and actively promote STEM knowledge within their community.</p><br>
+                        <p>Some of the unique features of this robot are:</p>
                         <ul>
-                            <li>Chasis diferencial con llantas neumáticas hecho a medida para sobrepasar los obstáculos de la cancha.</li>
-                            <li>Intake desplegable con llantas mecanum para centrar la pelota.</li>
-                            <li>Serializador de pelotas en forma de banda para acumular las 5 pelotas.</li>
-                            <li>Disparador de 5 pelotas con un sistema de motores a altas revoluciones.</li>
-                            <li>Torreta para ajustar el ángulo del disparador con un sistema de visión artificial.</li>
-                            <li>Ángulo ajustable para cambiar la trayectoria parabólica del disparo.</li>
-                            <li>Elevador para colgar el robot con perfiles de aluminio, poleas y tres motores 775.</li>
+                            <li>A custom-made differential chassis with pneumatic tires that allows the robot to overcome various obstacles on the game field.</li>
+                            <li>A deployable intake mechanism with mecanum wheels to center the ball.</li>
+                            <li>Ball serialization mechanism in the form of a conveyor belt to accumulate the 5 balls.</li>
+                            <li>Shooter mechanism for launching the 5 balls using a high-speed motor system.</li>
+                            <li>Turret mechanism for adjusting the shooting angle with a computer vision system.</li>
+                            <li>Adjustable angle to change the parabolic trajectory of the shot.</li>
+                            <li>Elevator to hang the robot using aluminum profiles, pulleys, and three 775 motors.</li>
                         </ul>
                         <img src="../images/first-2020-2_profile.jpg">
                     </div>
@@ -41,7 +41,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-2020-2_1.jpg">
