--- a/proyectos/first-2021-2.html
+++ b/proyectos/first-2021-2.html
@@ -1,5 +1,5 @@
 <!--20/11/2020-->
-<!--A inicios del año 2021 debía iniciar el nuevo reto de FRC pero debido a la pandemia era sabido que se iba a repetir el del año pasado, por ello opté por diseñar un concepto de robot mucho más eficiente que el anterior.-->
+<!--At the beginning of 2021, I was supposed to start the new FRC challenge, but due to the pandemic, it was expected that the previous year's challenge would be repeated. Therefore, I chose to design a concept for a robot that would be much more efficient than the previous one.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>FIRST 2021 (Concepto)</title>
+        <title>FIRST 2021 (Concept)</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -19,25 +19,25 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/first-2021-2_profile.jpg">
-                        <p>Debido a la pandemia era sabido que para la competencia de robótica FRC 2021 se repitiría el reto del año pasado ya que la mayoría de equipos ni siquiera tuvo la oportunidad de competir, con esto en mente y esperando que la pandemia terminara diseñé un robot con mucha más producción que en años anteriores y tomé inspiración de equipos que logré ver competir antes de que se cancelaran los eventos del 2020.</p><br>
-                        <p>Si bien este robot nunca llegó a ser construido porque como ya se sabe la pandemia no terminó para esa fecha, este robot hubiera contado con las siguientes características:</p>
+                        <p>Due to the pandemic, it was known that the FRC 2021 robotics competition would repeat the previous year's challenge as most teams didn't even have the opportunity to compete. With this in mind and hoping that the pandemic would end, I designed a robot that focused on higher production levels than in previous years. I drew inspiration from teams that I had seen compete before the events were canceled in 2020.</p><br>
+                        <p>While this robot was never built due to the ongoing pandemic, it would have featured the following characteristics:</p>
                         <ul>
-                            <li>Chasis diferencial de 6 llantas de tracción.</li>
-                            <li>Doble intake para recoger pelotas de dos lados.</li>
-                            <li>Indexador por gravedad y rodillos en el suelo.</li>
-                            <li>Pre-disparador para acelerar las pelotas antes de llegar al disparador.</li>
-                            <li>Disparador con dos motores Falcon y llantas tanto arriba como abajo con la misma velocidad tangencial.</li>
-                            <li>Ángulo ajustable por dos servomotores.</li>
-                            <li>Cámara "limelight" para el ajuste automático del disparo.</li>
-                            <li>Torreta unida al disparador para ajustar el disparo a cualquier ángulo.</li>
-                            <li>Elevador retraible para mantener el robot pequeño.</li>
-                            <li>Deslizador en la parte superior del elevador para balancearlo en la plataforma de la colgada.</li>
-                            <li>Llantas con sensor de color retraibles para obtener más puntos al girar un disco de colores a una posición específica.</li>
+                            <li>Differential chassis with 6 traction wheels.</li>
+                            <li>Dual intake to collect balls from two sides.</li>
+                            <li>Gravity-based indexer and floor rollers.</li>
+                            <li>Pre-shooter to accelerate the balls before reaching the shooter.</li>
+                            <li>Shooter with two Falcon motors and both top and bottom wheels spinning at the same tangential speed.</li>
+                            <li>Adjustable angle using two servo motors.</li>
+                            <li>"Limelight" camera for automatic shooting adjustment.</li>
+                            <li>Turret attached to the shooter to adjust the shot at any angle.</li>
+                            <li>Retractable elevator to keep the robot compact.</li>
+                            <li>Slider on the top of the elevator to balance it on the hanging platform.</li>
+                            <li>Retractable color-sensing wheels to earn more points by rotating a colored disc to a specific position.</li>
                         </ul>
-                        <p>Para este robot realicé un <a href="../resources/FRC Tech Brochure 2021.pdf" target="_blank">folleto técnico</a> que describe de mejor manera y visualmente cada parte del robot y el diseño puede encontrarse en mi <a href="https://grabcad.com/library/robot-3-0-1" target="_blank">grabcad</a>.</p>
+                        <p>For this robot, I created a <a href="../resources/FRC Tech Brochure 2021.pdf" target="_blank">technical brochure</a> that provides a detailed and visual description of each part of the robot. The design can be found on my <a href="https://grabcad.com/library/robot-3-0-1" target="_blank">GrabCAD</a>.</p>
                         <img src="../images/first-2021-2_profile.jpg">
                     </div>
                 </div>
@@ -45,7 +45,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-2021-2_1.jpg">
