--- a/proyectos/first-2021-3.html
+++ b/proyectos/first-2021-3.html
@@ -1,5 +1,5 @@
 <!--05/01/2021-->
-<!--Debido a que no se veía una fecha tentativa para el término de la pandemia, FIRST optó por hacer un "reto en casa" dónde se competiría en ciertos circuitos y ganarían aquellos robots con los menores tiempos.-->
+<!--Due to the uncertainty surrounding the end of the pandemic, FIRST decided to organize a "challenge at home" where teams would compete on specific circuits, and the winners would be determined based on the fastest completion times.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/first-2021-3_profile.jpg">
-                        <p>Debido al incremento de casos de COVID-19 durante inicios del 2021, FIRST optó por cancelar la temporada ese año pero creó FIRST AT HOME, una forma de mantener el desarrollo tecnológico a pesar de las adversidades. Esta forma de competir consisitía en que se mantendría el mismo reto del año anterior para que los equipos pudieran reutilizar sus robots pero se crearían 5 sub-retos, en algunos de ellos se debían completar circuitos y ganaría el robot que lo terminara en el menor tiempo posible; mientras que en otros se debían disparar pelotas desde diversas zonas y ganaría el robot que hiciera más puntos.</p><br>
+                        <p>Due to the increasing number of COVID-19 cases in early 2021, FIRST decided to cancel the regular season for that year. However, they introduced FIRST AT HOME as a way to continue technological development despite the challenges. In this format, the same challenge from the previous year would be maintained, allowing teams to reuse their robots. However, five sub-challenges were created, some of which involved completing circuits in the shortest possible time, while others focused on scoring points by shooting balls from different zones.</p><br>
                         <p>Este robot fue muy especial porque a diferencia de los anteriores lo construí completamente solo, empecé con el proceso de diseño, luego la manufactura de piezas, construcción, cableado y programación, esto debido a que no podíamos reunirnos más miembros del equipo por la pandemia. Lo más interesante de este robot es que sus únicos dos materiales eran madera e impresión 3D y la herramienta usada para su fabricación solo fueron una impresora 3D y una sierra caladora.</p><br>
                         <p>Este robot contaba con las siguientes funciones:</p>
                         <ul>
