--- a/proyectos/first-2022.html
+++ b/proyectos/first-2022.html
@@ -1,4 +1,5 @@
 <!--07/01/2022-->
+<!--The first robot for a real competition after the pandemic turned out to be the team's highest-performing robot in 8 long years.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -18,21 +19,21 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/first-2022_profile.jpg">
-                        <p>Este es el último robot que construí para la competencia "FIRST Robotics Competition", al igual que en los años anteriores el proceso entero de diseño fue mio y me involucré como mentor de 3 generaciones de prepa para construirlo, cablearlo y programarlo. El robot tenía como objetivos recoger pelotas del suelo para dispararlas a una portería a más de 2 metros de altura y colgarse en una serie de tres pasamanos a diferentes alturas que iban desde los 1.5 hasta los 2.5 metros. Las características que hacían a este robot único eran:</p>
+                        <p>This is the latest robot I built for the "FIRST Robotics Competition." Just like in previous years, I took charge of the entire design process and mentored three generations of high school students to construct, wire, and program it. The robot's objectives were to collect balls from the ground and shoot them into a goal located over 2 meters high, as well as to hang onto a series of three different-height handrails ranging from 1.5 to 2.5 meters. The characteristics that made this robot unique were:</p>
                         <ul>
-                            <li>Encoders para conocer la posición del robot en tiempo real.</li>
-                            <li>Cámara para medir ángulo y distancia a la portería.</li>
-                            <li>Encoders para conocer la velocidad del disparo.</li>
-                            <li>Recogedor de pelotas automático.</li>
-                            <li>Secuencia de colgada automática.</li>
-                            <li>Limitadores magnéticos de extensión de brazos.</li>
+                            <li>Encoders to track the robot's position in real time.</li>
+                            <li>Camera to measure angle and distance to the goal.</li>
+                            <li>Encoders to measure the speed of the shot.</li>
+                            <li>Automatic ball intake.</li>
+                            <li>Automatic hanging sequence.</li>
+                            <li>Magnetic extension arm limiters.</li>
                         </ul>
-                        <p>Este robot ganó el premio de inspiración a la ingeniería en la competencia regional del Tecnológico de Monterrey campus Monterrey y nos dio un pase al mundial para representar a México en Houston ante más de 400 equipos.</p><br>
-                        <p>En el mundial tuvimos un gran desempeño tratando de poner a México en alto y quedamos en el lugar 60 de nuestra división.</p><br>
-                        <p>El diseño puede encontrarse en mi <a href="https://grabcad.com/library/frc-2022-wint-3794-1" target="_blank">grabcad</a>.</p>
+                        <p>This robot won the Engineering Inspiration Award at the regional competition at Tecnológico de Monterrey, Monterrey campus, and earned us a spot at the world championship to represent Mexico in Houston among more than 400 teams.</p><br>
+                        <p>At the world championship, we had a great performance aiming to make Mexico proud, and we finished in the 60th place in our division.</p><br>
+                        <p>The design can be found on my <a href="https://grabcad.com/library/frc-2022-wint-3794-1" target="_blank">GrabCAD</a>.</p>
                         <img src="../images/first-2022_profile.jpg">
                     </div>
                 </div>
@@ -40,7 +41,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-2022_1.jpg">
