--- a/proyectos/first-2023.html
+++ b/proyectos/first-2023.html
@@ -1,5 +1,5 @@
 <!--20/01/2023-->
-<!--Concepto de robot para la competencia de robótica FRC 2023.-->
+<!--Concept for a robot for the FRC 2023 robotics competition.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,29 +19,29 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/first-2023_profile.jpg">
-                        <p>Este robot nunca será construido porque ya no formo parte de ningún equipo de FRC pero quise seguir trabajando mis habilidades de modelado 3D y renderizado para crear este concepto de un robot competitivo capaz de llegar a las finales de un campeonato mundial, el estilo es el mismo con el que he diseñado en años anteriores pero tiene mucha más calidad, ingeniería y simulaciones para asegurar su correcto funcionamiento.</p><br>
-                        <p>El robot está diseñado para ser producido por un equipo de capacidad de manufactura media-alta y conocimientos sólidos en electrónica y programación.</p><br>
-                        <p>A continuación mencionaré las características que este robot poseería de ser coonstruido:</p>
+                        <p>This robot will never be built as I am no longer part of any FRC team, but I wanted to continue honing my 3D modeling and rendering skills by creating this concept of a competitive robot capable of reaching the finals of a world championship. The design style is similar to what I have used in previous years, but it incorporates higher quality engineering and simulations to ensure its proper functionality.</p><br>
+                        <p>The robot is designed to be built by a team with medium-high manufacturing capabilities and strong knowledge in electronics and programming.</p><br>
+                        <p>Below are the features that this robot would have if it were to be built:</p>
                         <ul>
-                            <li>Bajo centro de masa.</li>
-                            <li>Intake retraible por pistones neumáticos pequeños.</li>
-                            <li>Indexador flexible para funcionar tanto en los conos como en los cubos.</li>
-                            <li>Brazo 100% aluminio.</li>
-                            <li>Bloqueo de brazo con motor a 20 amperios.</li>
-                            <li>Extensión horizontal de brazo con bloqueo contra gravedad de 10 amperios.</li>
-                            <li>Garra con rotación de 180 grados para orientar conos.</li>
-                            <li>Garra con movimiento lineal con pistones.</li>
-                            <li>Chasis diferencial para reducir costos.</li>
-                            <li>Determinación de la posición del elemento de juego dentro del robot por análisis de gráficas de corriente en los motores.</li>
-                            <li>Encoders absolutos para la posición del brazo y orientación de la garra.</li>
-                            <li>Límites magnéticos para el elevador lineal.</li>
-                            <li>Límites mecánicos y encoder integrado en el elevador para determinar si es que la garra debe recoger un cono o un cubo.</li>
-                            <li>Encoders en el chasis para la estimación de posición.</li>
+                            <li>Low center of gravity.</li>
+                            <li>Retractable intake using small pneumatic pistons.</li>
+                            <li>Flexible indexer to work with both cones and cubes.</li>
+                            <li>100% aluminum arm.</li>
+                            <li>Arm lock with a 20 amp motor.</li>
+                            <li>Horizontal arm extension with gravity lock using a 10 amp limited current on a motor.</li>
+                            <li>180-degree rotating claw to orient cones.</li>
+                            <li>Linear-motion claw with pistons.</li>
+                            <li>Differential drive chassis to reduce costs.</li>
+                            <li>Determination of the position of the game element within the robot through analysis of current graphs in the motors.</li>
+                            <li>Absolute encoders for the position of the arm and orientation of the claw.</li>
+                            <li>Magnetic limits for the linear elevator.</li>
+                            <li>Mechanical limits and integrated encoder on the elevator to determine whether the claw should pick up a cone or a cube.</li>
+                            <li>Encoders on the chassis for position estimation.</li>
                         </ul>
-                        <p>El diseño puede encontrarse en mi <a href="https://grabcad.com/library/frc-2023-robot-concept-1" target="_blank">grabcad</a>.</p>
+                        <p>The design can be found on my<a href="https://grabcad.com/library/frc-2023-robot-concept-1" target="_blank">GrabCAD</a>.</p>
                         <img src="../images/first-2023_profile.jpg">
                     </div>
                 </div>
@@ -49,7 +49,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-2023_1.jpg">
