--- a/proyectos/library.html
+++ b/proyectos/library.html
@@ -1,5 +1,5 @@
 <!--20/02/2022-->
-<!--Como parte de mis servicios de manufactura en colaboración con mi socio, diseñamos, cortamos, pintamos e instalamos una librería para una iglesia cercana a nuestra a nuestro taller.-->
+<!--As part of our manufacturing services in collaboration with my partner, we designed, cut, painted, and installed a bookshelf for a church located near our workshop.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Biblioteca</title>
+        <title>Library</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="small-description">
+                    <h1 class="subtitle">What is it about?</h1>
+                    <div class="description">
                         <img src="../images/biblioteca_profile.jpg">
-                        <p>Como parte de uno de los servicios que ofrezco está la manufactura de cualquier cosa, debido a ello mi socio y yo recibimos un pedido para diseñar una biblioteca a la medida en un cuarto desocupado de un iglesia cercana al taller.</p><br><p>La idea general era escoger una pared y crear una serie de cajas profundas en las que se puedan colocar libros muy grandes y en la segunda pared poner repisas donde colocar libros más pequeños.</p><br><p>Para los cajones se tomó la medida de la pared y se escogió el diseño para organizarlos de una forma algo creativa pero mantiendo la estructura de filas y columnas, para las repisas se diseñaron eles de madera con un tope en la parte frontal para colocar los libros sin que sean propensos a caerse.</p>
+                        <p>As part of one of the services I offer, which is manufacturing, my partner and I received an order to design a custom bookshelf for an unused room in a church located near our workshop.</p><br><p>The general idea was to select a wall and create a series of deep boxes where large books could be placed, and on the second wall, install shelves for smaller books.</p><br><p>For the drawers, the measurements of the wall were taken into account, and a design was chosen to organize them in a somewhat creative way while maintaining a structure of rows and columns. As for the shelves, wooden shelves were designed with a front stopper to hold the books in place and prevent them from falling.</p>
                         <img src="../images/biblioteca_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/biblioteca_1.jpg">
