--- a/proyectos/aerodesign.html
+++ b/proyectos/aerodesign.html
@@ -1,5 +1,5 @@
 <!--20/08/2021-->
-<!--Un grupo estudiantil del Tecnológico de Monterrey Campus Toluca encargado de la construcción de aeronaves para competencia.-->
+<!--A student group from Tecnológico de Monterrey, Campus Toluca, dedicated to the construction of aircrafts for competitions.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="small-description">
+                    <h1 class="subtitle">What is it about?</h1>
+                    <div class="description">
                         <img src="../images/aerodesign_profile.jpg">
-                        <p>Aerodesign es un grupo estudiantil del Tecnológico de Monterrey Campus Toluca que se encarga de crear aeronaves no tripuladas para la competencia SAE Aerodesign, este proyecto comprende un proceso completo de ingeniería ya que parte del diseño y modelado 3D de la aeronave incluyendo sus simulaciones topológicas, de resistencia de materiales y aerodinámicas y va hasta la manufactura real y el cableado electrónico.</p><br><p>Mi trabajo en el equipo fue principalmente en el diseño 3D dónde me encargué de reducir el peso del ala y darle movilidad a los alerones para permitir un correcto direccionamiento de la aeronave, de igual forma participé en el armado del avión entero y en la manufactura del tren de aterrizaje.</p>
+                        <p>Aerodesign is a student group from Tecnológico de Monterrey, Campus Toluca, dedicated to creating unmanned aircraft for the SAE Aerodesign competition. This project encompasses a complete engineering process, starting from the design and 3D modeling of the aircraft, including topological, material strength, and aerodynamic simulations. It extends to the actual manufacturing and electronic wiring of the aircraft.</p><br><p>In the team, my main role was in 3D design, where I focused on reducing the weight of the wing and providing mobility to the ailerons to ensure proper aircraft control. I also participated in the assembly of the entire plane and the manufacturing of the landing gear.</p>
                         <img src="../images/aerodesign_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/aerodesign_1.jpg">
