--- a/proyectos/dif-lego.html
+++ b/proyectos/dif-lego.html
@@ -1,5 +1,5 @@
 <!--20/07/2022-->
-<!--Un verano donde en colaboración con TECBOT (el primer equipo de robótica del Tec de Monterrey) impartí cursos de robótica con LEGO's a niños de 12 a 15 años.-->
+<!--During one summer, in collaboration with TECBOT (the first robotics team at the Tec de Monterrey), I taught robotics courses using LEGO to children aged 12 to 15 years old.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
-                    <div class="small-description">
+                    <h1 class="subtitle">What is it about?</h1>
+                    <div class="description">
                         <img src="../images/dif-lego_profile.jpg">
-                        <p>Durante el verano del 2022 me informaron que TECBOT (el primer equipo de robótica del Tec de Monterrey) estaba buscando gente para ayudar en la impartición de un curso de 2 semanas sobre robótica usando LEGO mindstorms, yo no tenía mucha experiencia programando en bloques por lo que vi un par de videos y me aventuré como tutor de 5 chicas y 5 chicos para enseñarles todo lo que necesitaban saber para programar un robot que pudiera seguir una linea negra evitando los 3 obstáculos que se les presentaban en su camino.</p><br><p>En este proyecto no solo se involucró el conocimiento técnico, sino que principalmente se buscaba encontrar las maneras de comunicar los temas sin que les pareciera aburrido a los niños y por ende yo diría que el apartado de la educación tuvo más importancia que el aspecto técnico.</p>
+                        <p>During the summer of 2022, I was informed that TECBOT (the first robotics team at Tec de Monterrey) was seeking people to assist in teaching a two-week robotics course using LEGO Mindstorms. Although I had limited experience with block programming, I watched a couple of videos and decided to take on the role of a tutor for five girls and five boys. My goal was to teach them everything they needed to know to program a robot that could follow a black line while avoiding three obstacles along its path.</p><br><p>In this project, the focus was not only on technical knowledge but primarily on finding ways to communicate the topics in a manner that would not bore the children. The educational aspect had more importance than the technical aspect, as it was crucial to engage the children and make the learning experience enjoyable for them. To achieve this, I incorporated interactive activities, games, and challenges into the curriculum to spark their curiosity and keep them motivated throughout the course. By creating a fun and engaging learning environment, we were able to effectively teach robotics concepts while ensuring the children remained enthusiastic and eager to learn.</p>
                         <img src="../images/dif-lego_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/dif-lego_1.jpg">
