--- a/proyectos/eggcnc.html
+++ b/proyectos/eggcnc.html
@@ -1,5 +1,5 @@
 <!--05/09/2020-->
-<!--Mi primer CNC, el más económico y sencillo para aprender como funciona el control numérico y a su vez poder obtener resultados reales al pintar huevos.-->
+<!--My first CNC machine, the most affordable and simple one, designed to learn how numerical control works and, at the same time, achieve tangible results by painting eggs.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,10 +19,10 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/eggcnc_profile.jpg">
-                        <p>Siempre me encantaron los CNC's son máquinas que encuentro fascinantes por su presición, velocidad y variedad, pero tan bellas obras de arte están asociadas a costes muy altos por lo que no me puedo permitir una, sin embargo, puedo entenderlas abstrayendo su funcionamiento a una máquina más económica.</p><br><p>Con este pensamiento es que nace la idea de crear el CNC más económico posible y buscando por internet encontré que existía algo llamado "eggbot", una máquina que puede pintar sobre superficies curvas y es controlada por instrucciones de CNC.</p><br><p>Dada esta gran noticia simplemente tuve que descargar el diseño en 3D existente y hacer pequeñas modificaciones para los componentes que iba a usar.</p><br><p>Una vez armado encontré muchos problemas para hacerlo funcionar debido a mi bajo conocimiento sobre programación para el momento por lo que tuve que optar por usar un software de propósito general para cualquier CNC de tres ejes y simplemente ajustar mis dibujos para que no salieran distorsionados debido a la superficie curva.</p>
+                        <p>I have always been fascinated by CNC machines, as they are remarkable for their precision, speed, and versatility. However, these beautiful works of art are often associated with high costs that I cannot afford. Nevertheless, I can still appreciate and understand their functionality by abstracting it to a more affordable machine. By creating a simplified and economical CNC machine, I can explore the principles and concepts behind CNC technology without the financial constraints. This allows me to delve into the world of computerized control and experience the joy of turning ideas into reality, even if on a smaller scale. Through this approach, I can still enjoy the benefits of CNC-like capabilities, such as precise control, automation, and the ability to create intricate designs. Whether it's painting eggs or working on other creative projects, this affordable CNC alternative enables me to explore the fascinating world of numerical control while unleashing my creativity.</p><br><p>With this mindset, the idea of creating the most affordable CNC machine possible emerged. While searching online, I came across something called an "eggbot," a machine specifically designed to paint on curved surfaces and controlled by CNC instructions. The eggbot's design and functionality make it an ideal starting point for exploring the world of CNC on a budget.</p><br><p>To do it I simply had to download the existing 3D design and make some small modifications to accommodate the components I planned to use. Once printed and assembled, I encountered several challenges in getting the eggbot to function properly, primarily due to my limited knowledge of programming at the time. As a result, I had to resort to using general-purpose software typically used for three-axis CNC machines and make adjustments to my designs to compensate for the curved surface and avoid distortion. This allowed me to focus on the creative aspect of painting on curved surfaces and gain hands-on experience with CNC control and artistic expression.</p>
                         <img src="../images/eggcnc_profile.jpg">
                     </div>
                 </div>
@@ -30,7 +30,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/eggcnc_1.jpg">
