--- a/proyectos/first-2019-2.html
+++ b/proyectos/first-2019-2.html
@@ -1,5 +1,5 @@
 <!--07/01/2019-->
-<!--Este fue el segundo robot que construí, era un robot completamente diferente al primero ya que medía más de un metro de altura y pesaba 50 kilogramos, este robot representó a México en el campeonato mundial en Houston, Texas.-->
+<!--This was the second robot I built, and it was completely different from the first one. It measured over one meter in height and weighed 50 kilograms. This robot represented Mexico in the World Championship in Houston, Texas.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,13 +19,13 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/first-2019-2_profile.jpg">
-                        <p>Este fue el primer robot de mayor tamaño en el que me involucré, su tarea era tomar discos y pelotas y colocarlos en naves espaciales a diferentes alturas, la operación del mismo era muy sencilla debido a la poca experiencia del equipo.</p><br>
-                        <p>Se usaba un apéndice de metal pasivo unido a un elevador el cual permitía introducir y bloquear por gravedad el disco para poder colocarlo en la nave espacial, de igual forma el elevador estaba unido a un set de llantas flexibles capaces de succionar las pelotas y elevarlas para colocarlas a las diferentes alturas de la nave espacial.</p><br>
-                        <p>El robot ofrecía movilidad por el campo de juego por medio de un chasis diferencial de 6 llantas de tracción que permitía movimientos hacia adelante, atras y rotaciones sobre su propio eje en ambos sentidos.</p><br>
-                        <p>El objetivo final de este robot era escalar una plataforma de 60cm de altura y esto se lograba usando una elevador lineal accionado por un tornillo sin fin que se extendía hacia el suelo del robot y lo levantaba, posteriormente un elevador lineal horizontal en el suelo deslizaba al robot para pasar de solo estar flotando a descansar completamente en la plataforma donde debía escalar.</p>
+                        <p>This was the first larger-sized robot I was involved in. Its task was to pick up discs and balls and place them in spaceships at different heights. The operation of the robot was straightforward due to the team's limited experience.</p><br>
+                        <p>A passive metal appendage was used, attached to an elevator, which allowed for the insertion and gravity-based locking of the disc to place it in the spaceship. Similarly, the elevator was connected to a set of flexible wheels capable of suctioning the balls and lifting them to the various heights of the spaceship.</p><br>
+                        <p>The robot offered mobility across the playing field through a 6-wheel drive differential chassis, enabling movements forward, backward, and rotations on its own axis in both directions.</p><br>
+                        <p>The ultimate goal of this robot was to climb a 60cm high platform, which was achieved using a linear elevator actuated by a lead screw that extended towards the robot's floor and lifted it. Then, a horizontal linear elevator on the floor slid the robot from a floating position to rest completely on the platform it needed to climb.</p>
                         <img src="../images/first-2019-2_profile.jpg">
                     </div>
                 </div>
@@ -33,7 +33,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-2019-2_1.jpg">
