--- a/proyectos/first-2021-1.html
+++ b/proyectos/first-2021-1.html
@@ -1,5 +1,5 @@
 <!--07/09/2020-->
-<!--Este robot lo diseñé durante la pandemia, se planeaba que toda la cancelación de eventos terminara pronto y pudieramos competir con este nuevo robot, ya que esto no fue posible, el robot quedó como un concepto y una gran experiencia de aprendizaje para mi.-->
+<!--I designed this robot during the pandemic, with the hope that event cancellations would soon end and we could compete with this new robot. However, since that wasn't possible, the robot remained as a concept and a valuable learning experience for me.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -19,23 +19,23 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="description">
                         <img src="../images/first-2021-1_profile.jpg">
-                        <p>Este robot lo diseñé durante septiembre del 2020, para estas fechas teníamos pensado que el tema de la pandemia se solucionaría para finales de año y en enero podríamos competir, de esa forma nace la idea de sin importar los tiempos inciertos crear un diseño que resolviera la problemática de ese año, evidentemente las cosas no se solucionaron para ese entonces y este robot quedó como un simple concepto pero una muy buena experiencia de diseño mecánico.</p><br>
-                        <p>Las características que hubieran hecho a este robot único son:</p>
+                        <p>I designed this robot in September 2020 with the expectation that the pandemic situation would be resolved by the end of the year, allowing us to compete in January. The idea was to create a design that addressed the challenges of that year, despite the uncertain times. However, things did not improve as expected, and this robot remained as a concept. Nonetheless, it provided me with a valuable experience in mechanical design.</p><br>
+                        <p>The characteristics that would have made this robot unique are:</p>
                         <ul>
-                            <li>Chasis con llantas mecanum para mover el robot en todas las direcciones.</li>
-                            <li>Intake dentro del robot con un rodillo de llantas flexibles para recoger discos del suelo.</li>
-                            <li>Banda transportadora para desplazar los discos desde el intake hasta un contenedor dónde se apilarían 3 de ellos.</li>
-                            <li>Contenedor con elevador lineal para subir los discos desde su punto mínimo hasta la altura del disparador.</li>
-                            <li>Servomotor que actuaría como patada para empujar los discos desde su posición en el elevador hasta el disparador.</li>
-                            <li>Disparador con una serie de 3 llantas a altas revoluciones y dos motores para acelerar los discos lo suficiente y poder disparar desde cualquier rincón de la cancha.</li>
-                            <li>Ángulo ajustable para orientar la superestructura del disparador en todo el rango de ángulos necesarios.</li>
-                            <li>Brazo con 2 grados de libertad unido a un elevador para tomar un tubo con base semicircular y sacarlo de la cancha para obtener más puntos.</li>
-                            <li>Soporte movil para el celular que controla el robot y sirve como cámara para visualizar el entorno.</li>
+                            <li>Chassis with mecanum wheels for omnidirectional movement of the robot in all directions.</li>
+                            <li>Internal intake with a flexible wheel roller to pick up discs from the floor.</li>
+                            <li>Conveyor belt to move the discs from the intake to a container where three of them would be stacked.</li>
+                            <li>Container with a linear elevator to raise the discs from their lowest point to the height of the shooter.</li>
+                            <li>Servomotor that would act as a kicker to push the discs from their position in the elevator to the shooter.</li>
+                            <li>Shooter with a series of 3 high-speed wheels and two motors to accelerate the discs enough to shoot from any corner of the field.</li>
+                            <li>Adjustable angle to orient the shooter's superstructure within the required range of angles.</li>
+                            <li>Arm with 2 degrees of freedom attached to an elevator to grab a semi-circular base tube and remove it from the field to earn additional points.</li>
+                            <li>Mobile phone holder that controls the robot and serves as a camera to visualize the surroundings.</li>
                         </ul>
-                        <p>Para este robot realicé un <a href="../resources/FTC Tech Brochure 2021.pdf" target="_blank">folleto técnico</a> que describe de mejor manera y visualmente cada parte del roboty el diseño puede encontrarse en mi <a href="https://grabcad.com/library/ftc-wint-15645-2020-2021-1" target="_blank">grabcad</a>.</p>
+                        <p>For this robot, I created a <a href="../resources/FTC Tech Brochure 2021.pdf" target="_blank">technical brochure</a> that provides a detailed and visual description of each part of the robot. The design can be found on my <a href="https://grabcad.com/library/ftc-wint-15645-2020-2021-1" target="_blank">GrabCAD</a>.</p>
                         <img src="../images/first-2021-1_profile.jpg">
                     </div>
                 </div>
@@ -43,7 +43,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-2021-1_1.jpg">
